# esp_32_tracker

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32
docs/: architecture.md  building.md  configuration.md  data-format.md  hardware.md  operation.md  power-management.md  troubleshooting.md  tutorial-build-and-flash.md  web-interface.md
main/: CMakeLists.txt  config.c  config.example.h  data_merge.c  data_merge.h  espnow_sync.c  espnow_sync.h  gps.c  gps.h  imu.c  imu.h  lcd.c  lcd.h  main.c  power.c  power.h  rtc.c  rtc.h  sd_storage.c  sd_storage.h  serial_log.c  serial_log.h  sync_config.example.h  types.h  upload.c  upload.h  webserver.c  webserver.h  wifi_manager.c  wifi_manager.h  wifi_upload.c  wifi_upload.h
spiffs_data/: config.html  index.html  map.html  ota.html
